--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,5 @@
 /* Home.css */
 
-/* General Reset */
 * {
     margin: 0;
     padding: 0;
@@ -9,16 +8,15 @@
     transition: all 0.3s ease;
 }
 
-/* Background Image */
 .background-video { 
-    position: fixed; /* Fixes the video position relative to the viewport */ 
+    position: fixed;
     top: 0; 
     left: 0; 
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
     z-index: -1; 
-    opacity: 0.9; /* Adjust opacity if needed */
+    opacity: 0.9;
 }
 
 /* Feature Section */
@@ -51,6 +49,24 @@
     transform: scale(1.05);
 }
 
+/* Responsive Feature Section */
+@media (max-width: 768px) {
+    .feature {
+        height: auto;
+        padding: 1rem 0;
+    }
+
+    .feature-content {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .feature img {
+        width: 80%;
+        margin-bottom: 1rem;
+    }
+}
+
 /* Info Box */
 .info-box {
     width: 50%;
@@ -63,7 +79,7 @@
 
 .info-box h2 {
     font-size: 2rem;
-    color: #f0ad4e;
+    color: var(--primary-color);
 }
 
 .info-box p {
@@ -75,7 +91,7 @@
     display: inline-block;
     margin-top: 1.5rem;
     padding: 0.5rem 1.5rem;
-    background-color: #f0ad4e;
+    background-color: var(--primary-color);
     color: #000;
     border-radius: 5px;
     text-decoration: none;
