--- a/src/styles/Models.css
+++ b/src/styles/Models.css
@@ -7,7 +7,6 @@
     align-items: center;
     background-color: #ffffff;
     padding: 0 20px 20px;
-    margin-top: -20px; /* Adjusts the page alignment with the navbar */
 }
 
 /* Search Bar */
@@ -108,8 +107,9 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    align-items: center;
+    align-items: flex-start; /* Align items to the left */
     width: 100%; /* Centered and full-width container */
+    padding-left: 2rem; /* Add padding to move the list a little bit to the left */
 }
 
 /* Model Card */
