--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -9,7 +9,7 @@
     text-align: center;
 }
 
-.login-page h1 {
+.login-page h2 {
     font-size: 2rem;
     color: var(--primary-color);
     margin-bottom: 1rem;
@@ -72,4 +72,21 @@
     color: red;
     font-size: 0.9rem;
     margin-top: -1rem;
+}
+
+/* New Styles for Signup Link */
+.login-page p {
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    color: #333;
+}
+
+.login-page p .link-btn {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.login-page p .link-btn:hover {
+    color: #d18d2c;
 }
